syntax = "proto3";

package session;

option go_package = "github.com/harmonyflow/syncbridge/session-state-service/proto";

enum MessageType {
  UNKNOWN = 0;
  HEARTBEAT = 1;
  HEARTBEAT_ACK = 2;
  SNAPSHOT_REQUEST = 3;
  SNAPSHOT_RESPONSE = 4;
  STATE_UPDATE = 5;
  ERROR = 6;
  AUTH = 7;
  AUTH_SUCCESS = 8;
  AUTH_FAILURE = 9;
}

message WebSocketMessage {
  MessageType type = 1;
  string session_id = 2;
  string user_id = 3;
  int64 timestamp = 4;
  bytes payload = 5;
  string correlation_id = 6;
}

message Heartbeat {
  int64 client_time = 1;
}

message HeartbeatAck {
  int64 server_time = 1;
  int64 client_time = 2;
}

message Snapshot {
  string session_id = 1;
  string user_id = 2;
  bytes state_data = 3;
  int64 created_at = 4;
  int64 expires_at = 5;
  string device_id = 6;
  string app_version = 7;
}

message StateUpdate {
  string key = 1;
  bytes value = 2;
  string operation = 3;  // SET, DELETE, MERGE
  int64 timestamp = 4;
}

message AuthRequest {
  string token = 1;
  string device_id = 2;
  string device_type = 3;
}

message AuthResponse {
  bool success = 1;
  string new_token = 2;
  int64 expires_at = 3;
  string error_message = 4;
}

message ErrorMessage {
  int32 code = 1;
  string message = 2;
  string details = 3;
}